front-pod.yaml
# apiVersion: v1
# kind: Pod
# metadata:
#   name: front-pod
#   labels:
#     app: front
# spec:
#   containers:
#   - name: front
#     image: chemmou26/front:latest
#     ports:
#     - containerPort: 3000


apiVersion: v1
kind: Pod
metadata:
  name: front-pod
  labels:
    app: front
spec:
  containers:
  - name: front
    image: chemmou26/front:latest
    ports:
    - containerPort: 3000
