temp-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: temp-pod
spec:
  containers:
  - name: temp
    image: appropriate/curl
    command: [ "sh", "-c", "sleep 3600" ]
