back-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: back-service
spec:
  type: NodePort
  ports:
  - port: 5000
    targetPort: 5000
    nodePort: 32002  # NodePort range: 30000-32767
  selector:
    app: back
